Menu de contexto
Menu de contexto

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,10 @@
     tools:context="com.alexaguilar.menucontextopopup.MainActivity">
 
     <TextView
+        android:id="@+id/tvNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/nombre_persona"
+        android:textSize="@dimen/texto_persona"
+        />
 </RelativeLayout>
