--- a/app/src/main/res/menu/menu_opciones.xml
+++ b/app/src/main/res/menu/menu_opciones.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/mAbout"
@@ -12,6 +13,16 @@
         android:id="@+id/mSettings"
         android:title="@string/menu_settings"
         android:orderInCategory="101"
+        >
+
+    </item>
+
+    <item
+        android:id="@+id/mRefresh"
+        android:title="Refresh"
+        android:orderInCategory="102"
+        app:showAsAction="always"
+        android:icon="@drawable/refresh_48"
         >
 
     </item>
